# sdk

./: .eslintrc.json  .gitignore  .npmignore  .npmrc  .prettierrc.json  CLAUDE.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE.md  README.md  esbuild.config.mjs  esbuild.mjs  esbuild.plugin.mjs  esbuild.proxy.mjs  esbuild.server.mjs  hydradx.db.sqlite-shm  jest.config.js  jest.config.mjs  jest.resolver.cjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts  turbo.json  version  xcmgr.sync.mjs
.changeset/: across-snowbridge-route.md  add-instabridge-support.md  align-polkadot-peers.md  angry-balloons-argue.md  blue-snails-accept.md  blue-terms-kiss.md  brave-eggs-care.md  brave-feet-switch.md  brave-humans-arrive.md  breezy-buckets-act.md  bumpy-things-deny.md  chain-native-balances.md  chilly-crews-dress.md  chubby-loops-build.md  clever-days-fry.md  cold-carrots-pull.md  common-aliens-kick.md  config.json  cool-bulldogs-fail.md  cruel-boxes-write.md  curly-drinks-train.md  curly-planets-open.md  curvy-flowers-carry.md  cyan-points-lead.md  deep-vans-retire.md  dirty-planes-fetch.md  dry-mammals-bet.md  dull-ideas-swim.md  dull-news-warn.md  eager-swans-serve.md  early-plants-stop.md  easy-clouds-sip.md  eighty-deer-push.md  eleven-rings-tie.md  empty-meteors-enter.md  erc20-event-gated-balances.md  every-pans-rule.md  evil-adults-wave.md  fair-dodos-bow.md  fair-gifts-draw.md  (+114 more)
.claude/: README.md  settings.json
apps/: esbuild.dev.mjs  esbuild.dist.mjs  package.json
crates/route-suggester/: Cargo.toml
crates/route-suggester/src/: types.rs
(+544 files in other folders)
